2013-October 31 Robin Shannon
   *src/System.cpp, System.h, CollisionOperator.cpp, CollisionOpperator.h: 
   Changes to the calculate function for the analytical representation. Also added code to get
   Kp matrix from bartis widom analysis. 

   *src/Plugins/AnalyticalRepresentation.cpp:
   Changes to recognise Bimolecular and Ireversible reactions correctly.

2013-October 31 Robin Shannon

	*src/Plugins/DefinedTunnelingCoefficients.cpp: Refactoring and correcting.

2013-October 28 Chris Morley

	* src/XMLPersist.cpp: Improve default handling for attributes. The
	element name is now also matched. Allows the default units to be
	depent on the context. 
	* defaults.xml: correct PTpair mis-spelling.

2013-October-26 Struan Robertson

	* AnalyticalRepresentation.cpp: Altered analytical representation to 
	allow for different pressure units. 

2013-October-26 Struan Robertson

	* CollisionOperator.cpp, and all derived reaction classes: removed the 
	(temporary) method that got the reduced collision operator size. 

	* MicroRate.h and dreived classes: renamed microcanoical flux method to
	make it clearer what it does.
	
2013-October-25 Struan Robertson

	* CollisionOperator.cpp, and all derived sink reaction classes: Fix for 
	irreversible exchange reaction broken during refactoring. 
	
2013-October-15 Struan Robertson

	* CollisionOperator.cpp, MolecularComponent.h/.cpp and all derived reaction 
	classes: Final refactoring changes to make the code more transparent to 
	reservoir states. 
	
2013-October-13 Struan Robertson

	* AnalyticalRepresentation.cpp: Analytical representation output altered 
	to be consistent with Cantera format. Baselines added.
	
2013-October-12 Struan Robertson

	* CollisionOperator.cpp, MolecularComponent.h/.cpp and all derived reaction 
	classes: More refactoring changes to make the code more transparent to 
	reservoir states. 
	
2013-September-30 Robin Shannon

	*SensitivityAnalysis.cpp, Rdouble.h: Changed SensitvityAnalysis to read