@@ -55,7 +55,6 @@
   <me:DistributionCalcMethod default="true" name="Boltzmann"/>
   <me:excessReactantConc default="NEEDS TO BE CHECKED**">2.25e+16</me:excessReactantConc>
   <!--<me:precision default="true">double</me:precision>-->
-  <me:Rubbish precision="dd" default="true"/>
   <me:PTpair precision="d" P="1.01E17" T="299" default="true"/>
   <me:bathgas default="true">He</me:bathgas>
   <me:TInfinity default="true">298</me:TInfinity>
@@ -73,6 +72,6 @@
   <me:ConstraintAddand default="true">0.0</me:ConstraintAddand>
   <me:SensitivityAnalysisIterations>10</me:SensitivityAnalysisIterations>
   <me:SensitivityAnalysisDelta>2</me:SensitivityAnalysisDelta>
-  <me:chebNumConc units="particles per cubic centimeter"/> 
+  <me:chebNumConc units="particles per cubic centimeter"/>
 </defaults>
 
